Add a preview image and slightly change the metadata card desription

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!--
-      (n+1)Tris
-  Kevin McVey, 2021
+                  (n+1)Tris
+              Kevin McVey, 2021
 
-  - http://kevin.4mcveys.com/nplusonetris
-  - https://github.com/kevinmcvey/nplusonetris
+    http://kevin.4mcveys.com/nplusonetris
+  https://github.com/kevinmcvey/nplusonetris
 -->
 <html>
   <head>
@@ -19,7 +19,7 @@
     <meta property="og:title" content="(N+1)Tris">
     <meta property="og:url" content="http://kevin.4mcveys.com/nplusonetris">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="A puzzle game by Kevin McVey">
+    <meta property="og:description" content="It's tetris. But every line you clear makes the pieces bigger.">
     <meta property="og:image" content="http://kevin.4mcveys.com/nplusonetris/images/preview.jpg">
     <meta name="twitter:card" content="summary_large_image"></meta>
   </head>
