"make canvas dimensions relative to parent element. Add infoCanvas"

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="divbutton centering-flex-wrapper" id="button-rotate">
-          <div id="title" class="unselectable-text">(N+1)Tris</div>
+          <canvas id="info-canvas"></canvas>
         </div>
       </div>
     </div>
