Add pause functionality. clean up event listening and game state so that events are listened for in proper game state

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
       <div id="title" class="unselectable-text">(N+1)Tris</div>
     </div>
 
+    <div class="centering-flex-wrapper" id="pause-wrapper">
+      <blink id="pause" class="unselectable-text">Paused</blink>
+    </div>
+
     <div class="centering-flex-wrapper" id="score-wrapper">
       <div id="score" class="unselectable-text">Score: 0</div>
     </div>
