Add 'NEXT' text to piece preview window

--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
           <div class="divbutton-body unselectable-text">ROTATE<br/>(&#x2191;&#xfe0e;)</div>
         </div>
 
-        <div class="divbutton centering-flex-wrapper" id="button-rotate">
+        <div class="divbutton centering-flex-wrapper">
+          <div id="info-text" class="unselectable-text">NEXT</div>
           <canvas id="info-canvas"></canvas>
         </div>
       </div>
     </div>
     
-    
-
     <div class="centering-flex-wrapper" id="title-wrapper">
       <div id="title" class="unselectable-text">(N+1)Tris</div>
     </div>
