--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
       <div id="tutorial" class="centering-flex-wrapper unselectable-text">
         <div id="tutorial-text">
           <p id="tutorial-line-0" class="hidden">-(N+1)Tris by Kevin McVey-</p>
-          <p id="tutorial-line-1" class="hidden">It's Tetris.</p>
-          <p id="tutorial-line-2" class="hidden">But every line you clear makes the pieces bigger.</p>
-          <p id="tutorial-line-3" class="hidden">Use your arrow keys or the buttons at left and right to play.</p>
-          <p id="tutorial-line-4" class="hidden">Off we go.</p></div>
+          <p id="tutorial-line-1" class="hidden">-Contributions by Will Simons-</p>
+          <p id="tutorial-line-2" class="hidden">It's Tetris.</p>
+          <p id="tutorial-line-3" class="hidden">But every line you clear makes the pieces bigger.</p>
+          <p id="tutorial-line-4" class="hidden">Use your arrow keys or the buttons at left and right to play.</p>
+          <p id="tutorial-line-5" class="hidden">Off we go.</p></div>
       </div>
     </div>
 
